@@ -3,12 +3,8 @@
 noinst_PROGRAMS=bogogrep
 
 EXTRA_DIST= \
-	README.bogopass \
 	README.randomtrain \
-	README.unbase64 \
 	bogofilter-qfe \
-	bogopass \
 	dot-qmail-bogofilter-default \
 	randomtrain \
-	scramble \
-	unbase64
+	scramble
